# iceyard

./: .env.example  .gitignore  LICENSE  LICENSING.md  Makefile  README.md  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_automation_policy.py  0003_job_correlation_id.py  0004_secret_reference_length.py  0005_live_metadata_cache.py
apps/api/iceyard_api/: main.py
apps/api/iceyard_api/advisor/: router.py  schemas.py  service.py
apps/api/iceyard_api/approvals/: router.py  schemas.py
apps/api/iceyard_api/audit/: router.py  schemas.py  service.py
apps/api/iceyard_api/auth/: dependencies.py  password.py  router.py  schemas.py  service.py
apps/api/iceyard_api/connections/: router.py  schemas.py  service.py
apps/api/iceyard_api/core/: config.py  logging.py  ratelimit.py
apps/api/iceyard_api/db/: __init__.py  models.py  schema_sync.py  session.py
apps/api/iceyard_api/editions/: router.py  service.py
apps/api/iceyard_api/health/: router.py  schemas.py  service.py
apps/api/iceyard_api/iceberg/: connectors.py  live_metadata.py  mock.py  router.py  schemas.py  service.py
apps/api/iceyard_api/jobs/: router.py  schemas.py
apps/api/iceyard_api/layout/: router.py  schemas.py  service.py  whatif_schemas.py  whatif_service.py
apps/api/iceyard_api/operations/: executor.py  registry.py  router.py  schemas.py  service.py
apps/api/iceyard_api/policies/: router.py  schemas.py  service.py
apps/api/iceyard_api/rbac/: dependencies.py  router.py  schemas.py  service.py
(+55 files in other folders)
