[project]
name = "iceyard-api"
version = "0.1.0"
description = "Iceyard API service"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "boto3>=1.34.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2,<9",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iceyard_api"]

[tool.pytest.ini_options]
testpaths = ["iceyard_api/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["alembic"]
